# turbo.fish

./: .build.yml  .editorconfig  .rustfmt.toml  Cargo.toml  README.md  index.html  turbofish.css
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: main.rs  random.rs  reverse_turbofish.rs  routes.rs  turbo_fish.rs  turbofish.rs
static/: turbo_fish.css  turbofish.css
templates/: 404.html  404.html.tera  about.html  index.html  index.html.tera  index.tera  reverse_turbofish.html.tera  reverse_turbofish.tera  skel.html  skel.html.tera  turbo_fish.tera  turbofish.html  turbofish.html.tera  turbofish.tera
