[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/jplatte/turbo.fish"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.4.1"
itertools = { version = "0.14.0", default-features = false }
minijinja = "2.3.1"
percent-encoding = "2.3.0"
rand = { version = "0.9.0", default-features = false, features = ["small_rng", "os_rng"] }
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
zon = { version = "0.0.4", features = ["fs", "hyper", "router", "task-local"] }
